ASP.NET Core In Action: try authorization with policies/requirements/handlers with RazorPages

--- a/Csharp/Asp.NetCoreInAction/Auth/RazorIdentity/Pages/Index.cshtml
+++ b/Csharp/Asp.NetCoreInAction/Auth/RazorIdentity/Pages/Index.cshtml
@@ -7,4 +7,16 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+        <a asp-page="/Auth/Greet">Check if you have a full name.</a>
+    </p>
+    <p>
+        <a asp-page="/Auth/GreetLongName">Check if your full name is long(>4).</a>
+    </p>
+    <p>
+        <a asp-page="/Auth/GmailCheck">Check if your Email is Gamil.</a>
+    </p>
+    <p>
+        <a asp-page="/Auth/OutlookCheck">Check if your Email is Outlook.</a>
+    </p>
 </div>
