Asp.Net Core in Action: add validation message display for custom validation attribute

--- a/Csharp/Asp.NetCoreInAction/Advanced/TryValidationAttribute/Pages/Index.cshtml
+++ b/Csharp/Asp.NetCoreInAction/Advanced/TryValidationAttribute/Pages/Index.cshtml
@@ -13,6 +13,7 @@
 
 <form asp-action="post">
     <input type="text" asp-for="Input.Language" placeholder="Enter your selected language here" />
+    <span asp-validation-for="Input.Language"></span>
     <button type="submit">Submit</button>
 </form>
 
