--- a/Csharp/MiscExercises/TryFluxor/Layout/NavMenu.razor
+++ b/Csharp/MiscExercises/TryFluxor/Layout/NavMenu.razor
@@ -15,15 +15,16 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="CounterPage">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="AnotherCounterPage">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Another Counter
             </NavLink>
         </div>
+
     </nav>
 </div>
 
