--- a/Csharp/LearnWinUI3/MyMediaCollection/MainWindow.xaml
+++ b/Csharp/LearnWinUI3/MyMediaCollection/MainWindow.xaml
@@ -25,11 +25,13 @@
             <TextBlock Grid.Column="0" Text="Media Collection" Margin="4" FontWeight="Bold" VerticalAlignment="Center" />
             <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBlock Text="Media Type:" Margin="4" FontWeight="Bold" VerticalAlignment="Center" />
-                <ComboBox x:Name="ItemFilter" MinWidth="120" Margin="0,2,6,4" />
+                <ComboBox ItemsSource="{x:Bind ViewModel.Mediums}" SelectedItem="{x:Bind ViewModel.SelectedMedium, Mode=TwoWay}"
+                          MinWidth="120" Margin="0,2,6,4" />
             </StackPanel>
         </Grid>
         
-        <ListView Grid.Row="1" x:Name="ItemList" Background="LightGoldenrodYellow">
+        <ListView ItemsSource="{x:Bind ViewModel.Items}"
+            Grid.Row="1" Background="LightGoldenrodYellow">
             <ListView.HeaderTemplate>
                 <DataTemplate>
                     <Grid>
