Learn WinUI3: Chap5, change 'save' to SplitButton

--- a/Csharp/LearnWinUI3/MyMediaCollection/Views/ItemDetailsPage.xaml
+++ b/Csharp/LearnWinUI3/MyMediaCollection/Views/ItemDetailsPage.xaml
@@ -66,8 +66,26 @@
         </Grid>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Save" Margin="8,8,0,8"
-                    Command="{x:Bind ViewModel.SaveCommand}"/>
+            <!--<Button Content="Save" Margin="8,8,0,8"
+                    Command="{x:Bind ViewModel.SaveCommand}"/>-->
+            <SplitButton Content="Save and Return" Margin="8,8,0,8"
+                         Click="{x:Bind ViewModel.SaveItemAndReturn}"
+                         IsEnabled="{x:Bind ViewModel.IsDirty, Mode=OneWay}">
+                <SplitButton.Flyout>
+                    <Flyout>
+                        <StackPanel>
+                            <Button Content="Save and Create New"
+                                    Click="{x:Bind ViewModel.SaveItemAndContinue}"
+                                    IsEnabled="{x:Bind ViewModel.IsDirty, Mode=OneWay}"
+                                    Background="Transparent"/>
+                            <Button Content="Save and Return"
+                                    Click="{x:Bind ViewModel.SaveItemAndReturn}"
+                                    IsEnabled="{x:Bind ViewModel.IsDirty, Mode=OneWay}"
+                                    Background="Transparent"/>
+                        </StackPanel>
+                    </Flyout>
+                </SplitButton.Flyout>
+            </SplitButton>
             <Button Content="Cancel" Margin="8"
                     Command="{x:Bind ViewModel.CancelCommand}"/>
         </StackPanel>
