--- a/Csharp/LearnWinUI3/MyMediaCollection/Views/ItemDetailsPage.xaml
+++ b/Csharp/LearnWinUI3/MyMediaCollection/Views/ItemDetailsPage.xaml
@@ -69,6 +69,7 @@
             <!--<Button Content="Save" Margin="8,8,0,8"
                     Command="{x:Bind ViewModel.SaveCommand}"/>-->
             <SplitButton Content="Save and Return" Margin="8,8,0,8"
+                         x:Name="SaveButton"
                          Click="{x:Bind ViewModel.SaveItemAndReturn}"
                          IsEnabled="{x:Bind ViewModel.IsDirty, Mode=OneWay}">
                 <SplitButton.Flyout>
@@ -85,6 +86,14 @@
                         </StackPanel>
                     </Flyout>
                 </SplitButton.Flyout>
+
+                <SplitButton.Resources>
+                    <TeachingTip x:Name="SavingTip"
+                                 Target="{x:Bind SaveButton}"
+                                 Title="Save and create new"
+                                 Subtitle="Use the drop down button option to save your item and create another.">
+                    </TeachingTip>
+                </SplitButton.Resources>
             </SplitButton>
             <Button Content="Cancel" Margin="8"
                     Command="{x:Bind ViewModel.CancelCommand}"/>
