--- a/Csharp/LearnWinUI3/MyMediaCollection/Views/MainPage.xaml
+++ b/Csharp/LearnWinUI3/MyMediaCollection/Views/MainPage.xaml
@@ -26,7 +26,7 @@
             <TextBlock Grid.Column="0" Text="Media Collection" Margin="4" FontWeight="Bold" VerticalAlignment="Center" />
             <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBlock Text="Media Type:" Margin="4" FontWeight="Bold" VerticalAlignment="Center" />
-                <ComboBox ItemsSource="{x:Bind ViewModel.Mediums}" SelectedItem="{x:Bind ViewModel.SelectedMedium, Mode=TwoWay}"
+                <ComboBox ItemsSource="{x:Bind ViewModel.Mediums, Mode=OneWay}" SelectedItem="{x:Bind ViewModel.SelectedMedium, Mode=TwoWay}"
                           MinWidth="120" Margin="0,2,6,4" />
             </StackPanel>
         </Grid>
