--- a/Csharp/LearnWinUI3/MyMediaCollection/Views/ItemDetailsPage.xaml
+++ b/Csharp/LearnWinUI3/MyMediaCollection/Views/ItemDetailsPage.xaml
@@ -31,9 +31,12 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="Item Details" FontSize="18" Margin="8"/>
+        <TextBlock Grid.Row="0" Text="Item Details" Style="{StaticResource SubheaderTextBlockStyle}" Margin="8"/>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1"
+              BorderBrush="{ThemeResource SystemAccentColor}"
+              BorderThickness="0,1,0,1"
+              Margin="4,0,4,8">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
