--- a/Csharp/LearnWinUI3/MyMediaCollection/MainWindow.xaml
+++ b/Csharp/LearnWinUI3/MyMediaCollection/MainWindow.xaml
@@ -8,4 +8,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+    <Window.SystemBackdrop>
+        <DesktopAcrylicBackdrop/>
+    </Window.SystemBackdrop>
+
 </Window>
