--- a/Csharp/LearnWinUI3/MyMediaCollection/Views/MainPage.xaml
+++ b/Csharp/LearnWinUI3/MyMediaCollection/Views/MainPage.xaml
@@ -14,6 +14,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0">
@@ -73,9 +74,17 @@
                 BorderThickness="0,1,0,0"
                 Margin="4,0">
             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                <Button Command="{x:Bind ViewModel.SendToastCommand}"
+                        Content="Send Notification"
+                        Margin="8,8,0,8"/>
+                <Button Command="{x:Bind ViewModel.SendToastWithTextCommand}"
+                        Content="Send Notification with Text"
+                        Margin="8,8,0,8"/>
                 <Button Content="Add/Edit Item" Command="{x:Bind ViewModel.AddEditCommand}" Margin="8,8,0,8" />
                 <Button Content="Delete Item" Command="{x:Bind ViewModel.DeleteCommand}" Margin="8" />
             </StackPanel>
         </Border>
+
+        <InfoBar Grid.Row="3" x:Name="notifyInfoBar"/>
     </Grid>
 </Page>
