--- a/Web/The-Odin-Project/css-exercises/flex/07-flex-layout-2/style.css
+++ b/Web/The-Odin-Project/css-exercises/flex/07-flex-layout-2/style.css
@@ -1,29 +1,74 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+  display: flex;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 16px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex: 1 0 auto;
+  padding: 16px;
+  font-size: 24px;
+}
+
+.sidebar>ul {
+  list-style-type: none;
+}
+
+.card-container {
+  flex: 4;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 48px;
+  gap: 48px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
   border-radius: 4px;
+  display: flex;
+  justify-content: flex-start;
+  flex-basis: 200px;
+  padding: 20px;
 }
