--- a/Csharp/Avalonia/GetStartedApp/App.axaml
+++ b/Csharp/Avalonia/GetStartedApp/App.axaml
@@ -1,5 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:GetStartedApp"
              x:Class="GetStartedApp.App"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
@@ -7,4 +8,12 @@
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
+    
+    <Application.Resources>
+        <ControlTheme
+            x:Key="{x:Type local:AreaButton}"
+            BasedOn="{StaticResource {x:Type Button}}"
+            TargetType="local:AreaButton" />
+
+    </Application.Resources>
 </Application>
