add(C#): try using customized fonts in Avalonia

--- a/Csharp/Avalonia/GetStartedApp/App.axaml
+++ b/Csharp/Avalonia/GetStartedApp/App.axaml
@@ -8,5 +8,9 @@
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
-             
+    
+    <Application.Resources>
+        <FontFamily x:Key="NunitoFont">/Assets/Fonts#Nunito</FontFamily>
+    </Application.Resources>
+
 </Application>
